bundles/roboconf-core/src/test/resources/configurations/invalid/instanceof-extra-char.instances
instanceof server { failed comment
	name: server1;
}
